# dex-cli

./: AGENTS.md  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  README.md  install.sh
.claude/skills/dex/: SKILL.md
.github/workflows/: ci.yml  release.yml
docs/: DESIGN.md  PLANS.md  QUALITY_SCORE.md  RELIABILITY.md  SECURITY.md
docs/design-docs/: agent-session-key.md  cli-commands.md  client-layer.md  config-and-auth.md  core-beliefs.md  index.md  output-formatting.md  skill-integration.md
docs/exec-plans/: tech-debt-tracker.md
docs/exec-plans/completed/: phase-0-skeleton.md  phase-1-readonly.md  phase-2-wallet-config.md  phase-3-trading.md  phase-4-account.md  phase-5-websocket.md  phase-6-shell-admin.md  phase-7-skill-polish.md
docs/product-specs/: acceptance-tests.md  index.md  user-workflows.md
docs/references/: dex-api-endpoints.md  polymarket-cli-architecture.md  tx-gateway-endpoints.md
skills/dex/: SKILL.md
src/: auth.rs  config.rs  main.rs  shell.rs
src/client/: bridge.rs  exchange.rs  gateway.rs  info.rs  mod.rs  ws.rs
src/commands/: account.rs  admin.rs  agent.rs  market.rs  mod.rs  order.rs  position.rs  setup.rs  status.rs  wallet.rs  watch.rs
src/output/: account.rs  market.rs  mod.rs  order.rs  position.rs
tests/: cli_integration.rs
