[package]
name = "dex-cli"
version = "0.1.0"
edition = "2021"
description = "CLI for DEX on Sui — query markets, trade, and manage positions"
license = "MIT"

[[bin]]
name = "dex"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tabled = "0.17"
anyhow = "1"
chrono = "0.4"
dirs = "6"
rustyline = "15"
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
url = "2"
alloy = { version = "1.6", default-features = false, features = [
    "signer-local", "signers",
    "providers", "contract", "sol-types",
    "reqwest-rustls-tls",
] }
hex = "0.4"
blake2 = "0.10"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"
